--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3,6 +3,9 @@
 body {
     font-family: 'Courier New', Courier, monospace;
     font-size: 16px;
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
 }
 
 #container {
@@ -12,6 +15,7 @@ body {
     margin-left: auto;
     margin-right: auto;
     padding: 20px;
+    flex: 1;
 }
 
 #intro {
@@ -33,6 +37,15 @@ form {
     clear: both;
 }
 
+footer {
+    width:100%;
+    text-align: center;
+    height: 30px;
+    margin-top: 20px;
+    padding-top: 10px;
+    background-color: white;
+    border-top: 4px solid #414733;
+}
 
 /* ===== Font Styles ==== */
 
